Phase 1/gen/main/grammar/SimpleLOOPParser.java
// Generated from C:/Users/negar/OneDrive/Documents/UT/Term6/Compiler/1/src/main/grammar\SimpleLOOP.g4 by ANTLR 4.9.2
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleLOOPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IntLiteral=1, Class=2, Private=3, Public=4, Self=5, Initialize=6, Print=7, 
		New=8, Null=9, Delete=10, Include=11, Add=12, Merge=13, Begin=14, End=15, 
		Int=16, Bool=17, True=18, False=19, Set=20, Fptr=21, Main=22, Void=23, 
		While=24, Do=25, If=26, Else=27, Elsif=28, Each=29, Return=30, SemiCollon=31, 
		LPar=32, RPar=33, LBrack=34, RBrack=35, LCurlyBrack=36, RCurlyBrack=37, 
		Comma=38, Equals=39, PPlus=40, MMinus=41, Assign=42, Plus=43, Minus=44, 
		Not=45, Multiply=46, Division=47, DSlahs=48, Dot=49, Arrow=50, Less=51, 
		Greater=52, And=53, Or=54, Line=55, Colon=56, QMark=57, NONZERODIGIT=58, 
		Identifier=59, ClassIdentifier=60, NewLine=61, Comment=62, WS=63;
	public static final int
		RULE_simpleLOOP = 0, RULE_program = 1, RULE_varDefSection = 2, RULE_varDef = 3, 
		RULE_classVarDef = 4, RULE_types = 5, RULE_identifierGroup = 6, RULE_fptr_type = 7, 
		RULE_array_type = 8, RULE_set_type = 9, RULE_classSection = 10, RULE_classStatementBlock = 11, 
		RULE_classScope = 12, RULE_classDef = 13, RULE_initClass = 14, RULE_constructor = 15, 
		RULE_mArgument = 16, RULE_argVarDef = 17, RULE_argIdentifierGroup = 18, 
		RULE_mainStatementBlock = 19, RULE_scope = 20, RULE_statement = 21, RULE_returnStatement = 22, 
		RULE_ifStatement = 23, RULE_eachLoop = 24, RULE_printStatement = 25, RULE_expressionStatement = 26, 
		RULE_commaExpression = 27, RULE_commaExpressionL = 28, RULE_assignExpression = 29, 
		RULE_ternaryExpression = 30, RULE_ternaryExpressionL = 31, RULE_logicalOrExpression = 32, 
		RULE_logicalOrExpressionL = 33, RULE_logicalAndExpression = 34, RULE_logicalAndExpressionL = 35, 
		RULE_equalityExpression = 36, RULE_equalityExpressionL = 37, RULE_relationExpression = 38, 
		RULE_relationExpressionL = 39, RULE_additiveExpression = 40, RULE_additiveExpressionL = 41, 
		RULE_multExpression = 42, RULE_multExpressionL = 43, RULE_unaryExpression = 44, 
		RULE_incDecExpression = 45, RULE_incDecExpressionL = 46, RULE_memberExpression = 47, 
		RULE_memberExpressionL = 48, RULE_specialExpression = 49, RULE_newFuncExpression = 50, 
		RULE_valExpression = 51, RULE_params = 52, RULE_literal = 53, RULE_setLiteral = 54, 
		RULE_boolLiteral = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"simpleLOOP", "program", "varDefSection", "varDef", "classVarDef", "types", 
			"identifierGroup", "fptr_type", "array_type", "set_type", "classSection", 
			"classStatementBlock", "classScope", "classDef", "initClass", "constructor", 
			"mArgument", "argVarDef", "argIdentifierGroup", "mainStatementBlock", 
			"scope", "statement", "returnStatement", "ifStatement", "eachLoop", "printStatement", 
			"expressionStatement", "commaExpression", "commaExpressionL", "assignExpression", 
			"ternaryExpression", "ternaryExpressionL", "logicalOrExpression", "logicalOrExpressionL", 
			"logicalAndExpression", "logicalAndExpressionL", "equalityExpression", 
			"equalityExpressionL", "relationExpression", "relationExpressionL", "additiveExpression", 
			"additiveExpressionL", "multExpression", "multExpressionL", "unaryExpression", 
			"incDecExpression", "incDecExpressionL", "memberExpression", "memberExpressionL", 
			"specialExpression", "newFuncExpression", "valExpression", "params", 
			"literal", "setLiteral", "boolLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'class'", "'private'", "'public'", "'self'", "'initialize'", 
			"'print'", "'new'", "'null'", "'delete'", "'include'", "'add'", "'merge'", 
			"'begin'", "'end'", "'int'", "'bool'", "'true'", "'false'", "'Set'", 
			"'fptr'", "'main'", "'void'", "'while'", "'do'", "'if'", "'else'", "'elsif'", 
			"'each'", "'return'", "';'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"','", "'=='", "'++'", "'--'", "'='", "'+'", "'-'", "'!'", "'*'", "'/'", 
			"'//'", "'.'", "'->'", "'<'", "'>'", "'&&'", "'||'", "'|'", "':'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IntLiteral", "Class", "Private", "Public", "Self", "Initialize", 
			"Print", "New", "Null", "Delete", "Include", "Add", "Merge", "Begin", 
			"End", "Int", "Bool", "True", "False", "Set", "Fptr", "Main", "Void", 
			"While", "Do", "If", "Else", "Elsif", "Each", "Return", "SemiCollon", 
			"LPar", "RPar", "LBrack", "RBrack", "LCurlyBrack", "RCurlyBrack", "Comma", 
			"Equals", "PPlus", "MMinus", "Assign", "Plus", "Minus", "Not", "Multiply", 
			"Division", "DSlahs", "Dot", "Arrow", "Less", "Greater", "And", "Or", 
			"Line", "Colon", "QMark", "NONZERODIGIT", "Identifier", "ClassIdentifier", 
			"NewLine", "Comment", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleLOOP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleLOOPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SimpleLOOPContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimpleLOOPParser.EOF, 0); }
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public SimpleLOOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleLOOP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterSimpleLOOP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitSimpleLOOP(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitSimpleLOOP(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleLOOPContext simpleLOOP() throws RecognitionException {
		SimpleLOOPContext _localctx = new SimpleLOOPContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_simpleLOOP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(112);
				match(NewLine);
				}
				break;
			}
			setState(115);
			program();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NewLine) {
				{
				{
				setState(116);
				match(NewLine);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public VarDefSectionContext varDefSection() {
			return getRuleContext(VarDefSectionContext.class,0);
		}
		public ClassSectionContext classSection() {
			return getRuleContext(ClassSectionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			varDefSection();
			setState(125);
			classSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefSectionContext extends ParserRuleContext {
		public List<VarDefContext> varDef() {
			return getRuleContexts(VarDefContext.class);
		}
		public VarDefContext varDef(int i) {
			return getRuleContext(VarDefContext.class,i);
		}
		public List<TerminalNode> NewLine() { return getTokens(SimpleLOOPParser.NewLine); }
		public TerminalNode NewLine(int i) {
			return getToken(SimpleLOOPParser.NewLine, i);
		}
		public VarDefSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterVarDefSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitVarDefSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitVarDefSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefSectionContext varDefSection() throws RecognitionException {
		VarDefSectionContext _localctx = new VarDefSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefSection);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << Set) | (1L << Fptr) | (1L << ClassIdentifier))) != 0)) {
				{
				{
				setState(127);
				varDef();
				setState(129); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(128);
						match(NewLine);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(131); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDefContext extends ParserRuleContext {
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public IdentifierGroupContext identifierGroup() {
			return getRuleContext(IdentifierGroupContext.class,0);
		}
		public VarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefContext varDef() throws RecognitionException {
		VarDefContext _localctx = new VarDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			types();
			setState(139);
			identifierGroup();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassVarDefContext extends ParserRuleContext {
		public Token r;
		public TerminalNode Identifier() { return getToken(SimpleLOOPParser.Identifier, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode Void() { return getToken(SimpleLOOPParser.Void, 0); }
		public ClassVarDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classVarDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterClassVarDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitClassVarDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitClassVarDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassVarDefContext classVarDef() throws RecognitionException {
		ClassVarDefContext _localctx = new ClassVarDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classVarDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Bool:
			case Set:
			case Fptr:
			case ClassIdentifier:
				{
				setState(141);
				types();
				}
				break;
			case Void:
				{
				setState(142);
				match(Void);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(145);
			((ClassVarDefContext)_localctx).r = match(Identifier);
			System.out.println("MethodDec : " + (((ClassVarDefContext)_localctx).r!=null?((ClassVarDefContext)_localctx).r.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(SimpleLOOPParser.Int, 0); }
		public TerminalNode Bool() { return getToken(SimpleLOOPParser.Bool, 0); }
		public Array_typeContext array_type() {
			return getRuleContext(Array_typeContext.class,0);
		}
		public Fptr_typeContext fptr_type() {
			return getRuleContext(Fptr_typeContext.class,0);
		}
		public Set_typeContext set_type() {
			return getRuleContext(Set_typeContext.class,0);
		}
		public TypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_types; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypesContext types() throws RecognitionException {
		TypesContext _localctx = new TypesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_types);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(Int);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				match(Bool);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				array_type();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				fptr_type();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				set_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierGroupContext extends ParserRuleContext {
		public Token r;
		public Token z;
		public List<TerminalNode> Identifier() { return getTokens(SimpleLOOPParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(SimpleLOOPParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(SimpleLOOPParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(SimpleLOOPParser.Comma, i);
		}
		public TerminalNode SemiCollon() { return getToken(SimpleLOOPParser.SemiCollon, 0); }
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public IdentifierGroupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierGroup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterIdentifierGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitIdentifierGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitIdentifierGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierGroupContext identifierGroup() throws RecognitionException {
		IdentifierGroupContext _localctx = new IdentifierGroupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_identifierGroup);
		int _la;
		try {
			setState(171);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				((IdentifierGroupContext)_localctx).r = match(Identifier);
				System.out.println("VarDec : " + (((IdentifierGroupContext)_localctx).r!=null?((IdentifierGroupContext)_localctx).r.getText():null));
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(157);
					match(Comma);
					setState(158);
					((IdentifierGroupContext)_localctx).z = match(Identifier);
					System.out.println("VarDec : " + (((IdentifierGroupContext)_localctx).z!=null?((IdentifierGroupContext)_localctx).z.getText():null));
					}
					}
					setState(164);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(166);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(165);
					match(SemiCollon);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(168);
				((IdentifierGroupContext)_localctx).r = match(Identifier);
				System.out.println("VarDec : " + (((IdentifierGroupContext)_localctx).r!=null?((IdentifierGroupContext)_localctx).r.getText():null));
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(170);
				expressionStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fptr_typeContext extends ParserRuleContext {
		public TerminalNode Fptr() { return getToken(SimpleLOOPParser.Fptr, 0); }
		public TerminalNode Less() { return getToken(SimpleLOOPParser.Less, 0); }
		public TerminalNode Arrow() { return getToken(SimpleLOOPParser.Arrow, 0); }
		public TerminalNode Greater() { return getToken(SimpleLOOPParser.Greater, 0); }
		public List<TypesContext> types() {
			return getRuleContexts(TypesContext.class);
		}
		public TypesContext types(int i) {
			return getRuleContext(TypesContext.class,i);
		}
		public List<TerminalNode> Void() { return getTokens(SimpleLOOPParser.Void); }
		public TerminalNode Void(int i) {
			return getToken(SimpleLOOPParser.Void, i);
		}
		public List<TerminalNode> Comma() { return getTokens(SimpleLOOPParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(SimpleLOOPParser.Comma, i);
		}
		public Fptr_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fptr_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).enterFptr_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleLOOPListener ) ((SimpleLOOPListener)listener).exitFptr_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleLOOPVisitor ) return ((SimpleLOOPVisitor<? extends T>)visitor).visitFptr_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fptr_typeContext fptr_type() throws RecognitionException {
		Fptr_typeContext _localctx = new Fptr_typeContext(_ctx, getState());
